--- a/Module_3_sol/css/styles.css
+++ b/Module_3_sol/css/styles.css
@@ -4,7 +4,7 @@ body {
 	background-color: #008080;
 	font-family: 'Dancing Script', cursive;
 }
-.container {
+.container-fluid {
 	margin-left: 30px;
 	padding: 0;
 }
